# nix-many-build

./: Cargo.toml  README.md  flake.nix
src/: main.rs  nixapi.rs
test/: test.bash  test.nix
