[package]
name = "nix-many-build"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-fn-stream = "0.2.2"
async-recursion = "1.1.1"
clap = { version = "4.5.13", features = ["derive"] }
futures = "0.3.30"
indicatif = "0.17.8"
nom = "7.1.3"
petgraph = "0.6.5"
reqwest = { version = "0.12.5", features = [
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = "0.3.18"
